# ARCHIVE_COMP0129_Robotics_Sensing_and_Manipulation

./: README.md
comp0129-s21-cw1-team11/src/: CMakeLists.txt  README.md  package.xml
comp0129-s21-cw1-team11/src/include/cw1/: AddTwoInts.h  AddTwoIntsRequest.h  cw1.h
comp0129-s21-cw1-team11/src/launch/: cw1.launch
comp0129-s21-cw1-team11/src/src/: Server.cpp  cw1.cpp  cw1.cpp.bak  test_cw1.cpp
comp0129-s21-cw3-team11/Code/comp0129_s21_cw3/: CMakeLists.txt  License  package.xml
comp0129-s21-cw3-team11/Code/comp0129_s21_cw3/config/: params.yaml
comp0129-s21-cw3-team11/Code/comp0129_s21_cw3/include/cw3/: AddTwoIntsResponse.h  cw3.h
comp0129-s21-cw3-team11/Code/comp0129_s21_cw3/launch/: cw3.launch
comp0129-s21-cw3-team11/Code/comp0129_s21_cw3/src/: Client.cpp  Listener.cpp  Talker.cpp  cw3.cpp  cylinder_segment.cpp  pick_place_tutorial.cpp  test_cw3.cpp
comp0129-s21-cw3-team11/code-report/C-Report/: main.tex
comp0129-s21-cw3-team11/research-report/: README.txt
comp0129-s21-cw3-team11/research-report/R-Report/: conclusions.tex  experiments.tex  intro.tex  main.tex  methodology.tex  problem_setup.tex  references.bib  related_work.tex
